--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,35 +5,35 @@ on:
   pull_request:
     branches: [ "master", "dev/*" ]
 
-  jobs:
-    build:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-        - name: Yarn setup
-          uses: DerYeger/yarn-setup-action@master
-          with:
-            node-version: 16
+      - name: Yarn setup
+        uses: DerYeger/yarn-setup-action@master
+        with:
+          node-version: 16
+      
+      - name: Install dependencies
+        run: yarn
         
-        - name: Install dependencies
-          run: yarn
-          
-        - name: Lint
-          run: yarn lint
+      - name: Lint
+        run: yarn lint
 
-        - name: Test
-          run: yarn test
+      - name: Test
+        run: yarn test
 
-    deploy:
-      runs-on: ubuntu-latest
-      needs: build
-      steps:
-        - name: executing remote ssh commands using password
-          uses: appleboy/ssh-action@v1.0.0
-          with:
-            username: ${{ secrets.USERNAME }}
-            host: ${{ secrets.HOST }}
-            script: /var/www/kittensgame.com/html/deploy.sh
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          username: ${{ secrets.KG_SSH_USER }}
+          host: ${{ secrets.KG_SSH_HOST }}
+          script: /var/www/kittensgame.com/html/deploy.sh
         
         
