--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: KG Deploy code
+name: KG Test/Deploy Code
 on:
   push:
     branches:
@@ -17,13 +17,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Yarn setup
-        uses: DerYeger/yarn-setup-action@master
+      - name: NodeJS setup
+        uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: 20
+
+      - name: Enable Corepack
+        run: corepack enable
 
       - name: Install dependencies
-        run: yarn
+        run: yarn install --frozen-lockfile
 
       - name: Lint
         run: yarn lint
@@ -36,7 +39,7 @@ jobs:
     if: github.event_name == 'push'
     needs: build
     steps:
-      - name: executing remote ssh commands using password
+      - name: Executing remote SSH commands using password
         uses: appleboy/ssh-action@v1.0.0
         with:
           username: ${{ secrets.KG_SSH_USER }}
