--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
     "http-server": "^0.12.3",
     "husky": "^4.2.5",
     "jest": "^26.1.0"
-  }
+  },
+  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
