--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,12 @@
           "parserOptions": {
             "ecmaVersion": 6
           }
+        },
+        {
+          "files": ["*.es6.js"],
+          "parserOptions": {
+            "ecmaVersion": 6
+          }
         }
     ],
     "ignorePatterns": ["lib/**/*", "node_modules/**/*"],
