--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
             "error",
             "always"
         ],
+        "keyword-spacing": ["error"],
         "no-mixed-spaces-and-tabs": [
             "warn", "smart-tabs"
         ],
