--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "node tools/generate-buildver.js",
     "test": "jest --config jest.config.unittest.json",
-    "lint": "eslint *.js js/*.js --quiet",
+    "lint": "yarn eslint *.js js/*.js --quiet",
     "start": "http-server"
   },
   "husky": {
